@@ -29,6 +29,7 @@ TODO :
 	genAS3 : fixed Error classes issues
 	genAS3 : fixed default basic type value in interfaces
 	flash9 : fixed UInt default parameter verify error
+	flash9 : fixed issue with flash.* string enums verify error
 	compiler : allowed \r line separators for HXML files
 
 2008-11-23: 2.02
